--- a/superlists/lists/templates/home.html
+++ b/superlists/lists/templates/home.html
@@ -3,9 +3,17 @@
 
     <body>
         <h1>Your To-Do list</h1>
-        <input id="id_new_item" placeholder="Enter a to-do item"/>
+        <form method="post">
+        <input id="id_new_item" name="item_text" placeholder="Enter a to-do item"/>
+            {% csrf_token %}
+        </form>
         <table id="id_list_table">
+            <tr>
+                <td>
+                    {{ new_item_text }}
+                </td>
 
+            </tr>
 
         </table>
     </body>
