--- a/superlists/lists/templates/home.html
+++ b/superlists/lists/templates/home.html
@@ -8,12 +8,10 @@
             {% csrf_token %}
         </form>
         <table id="id_list_table">
-            <tr>
-                <td>
-                    {{ new_item_text }}
-                </td>
 
-            </tr>
+            {% for item in item_list %}
+                <tr><td>{{ forloop.counter }}: {{item.text}}</td></tr>
+            {% endfor %}
 
         </table>
     </body>
