refactored views and added new endpoint

--- a/superlists/lists/templates/home.html
+++ b/superlists/lists/templates/home.html
@@ -3,7 +3,7 @@
 
     <body>
         <h1>Your To-Do list</h1>
-        <form method="post">
+        <form method="post" action="/lists/new">
         <input id="id_new_item" name="item_text" placeholder="Enter a to-do item"/>
             {% csrf_token %}
         </form>
