--- a/superlists/lists/templates/list.html
+++ b/superlists/lists/templates/list.html
@@ -6,7 +6,7 @@
 </head>
     <body>
         <h1>Your To-Do list</h1>
-        <form method="post" action="/">
+        <form method="post" action="/lists/new">
         <input id="id_new_item" name="item_text" placeholder="Enter a to-do item"/>
             {% csrf_token %}
         </form>
