--- a/superlists/lists/templates/home.html
+++ b/superlists/lists/templates/home.html
@@ -1,18 +1,5 @@
-<html>
-    <title>To-Do lists</title>
+{% extends 'base.html' %}
 
-    <body>
-        <h1>Your To-Do list</h1>
-        <form method="post" action="/lists/new">
-        <input id="id_new_item" name="item_text" placeholder="Enter a to-do item"/>
-            {% csrf_token %}
-        </form>
-        <table id="id_list_table">
+{% block header_text %}Start a new To-Do list {% endblock %}
 
-            {% for item in item_list %}
-                <tr><td>{{ forloop.counter }}: {{item.text}}</td></tr>
-            {% endfor %}
-
-        </table>
-    </body>
-</html>
+{% block form_action %} /lists/new {% endblock %}
